--- a/manuscripts/24-jb-dags/24-jb-swigs.tex
+++ b/manuscripts/24-jb-dags/24-jb-swigs.tex
@@ -359,11 +359,14 @@ assumptions for computing average treatment effects:
 \item
   \textbf{Positivity}: Each covariate that might affect treatment in the
   target population has a non-zero probability of being observed within
-  each treatment condition.
+  each treatment condition (refer to Westreich and Cole
+  (\citeproc{ref-westreich2010}{2010}); Bulbulia \emph{et al.}
+  (\citeproc{ref-bulbulia2023a}{2023})).
 \end{enumerate}
 
 While experiments often deviate from the ideal, potentially failing
-these assumptions, the ideal experiment satisfies them. None of these
+these assumptions, the ideal experiment satisfies them
+(\citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024}). None of these
 assumptions are guaranteed in observational or `real-world' settings.
 Only the positivity assumption can be verified by data.
 
@@ -386,8 +389,7 @@ Data}\label{schematic-workflow-for-inferring-causal-effects-from-real-world-data
   the results will generalise.
 \item
   \textbf{Ensure treatments to be compared satisfy causal consistency.}
-  Verify that the treatments correspond to interpretable interventions
-  (refer to Bulbulia (\citeproc{ref-bulbulia2023}{2023})).
+  Verify that the treatments correspond to interpretable interventions.
 \item
   \textbf{Evaluate whether treatment groups, conditional on measured
   covariates, are exchangeable.} Balancing confounding covariates across
@@ -473,8 +475,8 @@ Table~\ref{tbl-terminologygeneral} summarises our graphical conventions.
 
 \end{table}%
 
-We will describe our graphical conventions as they are used, starting
-with the primary elements:
+We describe our graphical conventions as they are used, starting with
+the primary elements:
 
 \begin{itemize}
 \item
@@ -524,9 +526,25 @@ rules of d-separation (\citeproc{ref-pearl1995}{Pearl 1995}).
 The rules of d-separation give rise to the backdoor criterion and
 `backdoor adjustment' theorem, which provide identification algorithms
 conditional on the structural assumptions encoded in a causal directed
-acyclic graph (\citeproc{ref-pearl1995}{Pearl 1995}). Here, we use the
-symbol \(\mathcal{G}\) to name a graph, which we will identify by
-referring to a row in a table.
+acyclic graph (\citeproc{ref-pearl1995}{Pearl 1995}). Causal directed
+acyclic graphs corresponding to these rules are given in
+Table~\ref{tbl-terminologygeneral}. For an introduction to causal
+directed acyclic graphs, see Rohrer (\citeproc{ref-rohrer2018}{2018});
+Hernan and Robins (\citeproc{ref-hernan2023}{2023}); Cinelli \emph{et
+al.} (\citeproc{ref-cinelli2022}{2022}); Barrett
+(\citeproc{ref-barrett2021}{2021}); McElreath
+(\citeproc{ref-mcelreath2020}{2020}); Greenland \emph{et al.}
+(\citeproc{ref-greenland1999}{1999}); Suzuki \emph{et al.}
+(\citeproc{ref-suzuki2020}{2020}); Pearl
+(\citeproc{ref-pearl2009a}{2009}); Hernan and Robins
+(\citeproc{ref-hernan2024WHATIF}{2024}); Major-Smith
+(\citeproc{ref-major2023exploring}{2023}); Greenland \emph{et al.}
+(\citeproc{ref-greenland1999}{1999});Bulbulia
+(\citeproc{ref-bulbulia2023}{2023}).
+
+Throughout we use the symbol \(\mathcal{G}\) to name a graph, indexed by
+the row of the table in which it appears. We next used causal graphs to
+clarify structural properties of effect modification.
 
 \begin{table}
 
@@ -539,42 +557,6 @@ referring to a row in a table.
 }
 
 \end{table}%
-
-Consider Table~\ref{tbl-terminologygeneral} \(\mathcal{G}_1\): If we
-assume that \(A\) and \(B\) are not causally related, and further that
-they do not share common causes, then \(A\) and \(B\) will not be
-statistically related.
-
-Consider Table~\ref{tbl-terminologygeneral} \(\mathcal{G}_2\): If we
-assume that \(A\) and \(B\) are causally related, that they do not share
-common causes or that their common causes have been accounted for, then
-\(A\) and \(B\) will be statistically related.
-
-Consider Table~\ref{tbl-terminologygeneral} \(\mathcal{G}_3\): If we
-assume that \(A\) causes \(B\) and that \(A\) causes \(C\), then the
-rules of d-separation imply that we may condition on or `control for'
-\(A\) to consistently estimate the effect of \(B\) on \(C\).
-
-Consider Table~\ref{tbl-terminologygeneral} \(\mathcal{G}_4\): If we
-assume that \(A\) causes \(B\) and that \(B\) causes \(C\), then the
-rules of d-separation imply that if we condition on \(B\), the true
-causal effect of \(A\) on \(C\) will be obscured such that \(A\) will be
-independent of \(C\) despite being causally associated with \(C\).
-
-Finally, consider Table~\ref{tbl-terminologygeneral} \(\mathcal{G}_5\):
-If we assume that \(A\) causes \(C\) and that \(B\) causes \(C\), then
-the rules of d-separation imply that if we condition on \(C\), the
-variables \(A\) and \(B\) will be associated, despite having no causal
-effect on each other.
-
-If we assume that the variables encoded in the graph correspond to
-`Structural Causal Models' then all causal relationships can be defined
-by the elementary structures presented in
-Table~\ref{tbl-terminologygeneral}.
-
-Now that we have clarified how causal directed acyclic graphs work, we
-may use them to clarify the first concept we consider: `effect
-modification'.
 
 \newpage{}
 
@@ -1932,19 +1914,19 @@ In 1986, Harvard statistician James Robins extended the potential
 outcomes framework to time-varying treatments, laying the foundation for
 powerful new longitudinal data science methods
 (\citeproc{ref-robins1986}{Robins 1986}). Judea Pearl introduced
-directed acyclic graphs (causal DAGs), making identification problems
-transparent and accessible to non-specialists
-(\citeproc{ref-pearl1995}{Pearl 1995}). Robins and Richardson extended
-Pearl's graphical models to evaluate counterfactual causal contrasts on
-graphs, building on Robins' earlier work. Concurrently, the causal
-revolution in economics was establishing a fertile frontier in causal
-data sciences. By the early 2000s, targeted learning frameworks were
-being developed (\citeproc{ref-vanderlaan2011}{Van Der Laan and Rose
-2011}), along with causal mediation analysis methods
-(\citeproc{ref-Diaz2023}{Dı́az \emph{et al.} 2023};
-\citeproc{ref-pearl2009a}{Pearl 2009}; \citeproc{ref-robins1992}{Robins
-and Greenland 1992}; \citeproc{ref-rudolph2024mediation}{Rudolph
-\emph{et al.} 2024}; \citeproc{ref-vanderweele2015}{VanderWeele 2015};
+directed acyclic graph, making identification problems transparent and
+accessible to non-specialists (\citeproc{ref-pearl1995}{Pearl 1995}).
+Robins and Richardson extended Pearl's graphical models to evaluate
+counterfactual causal contrasts on graphs, building on Robins' earlier
+work. Concurrently, the causal revolution in economics was establishing
+a fertile frontier in causal data sciences. By the early 2000s, targeted
+learning frameworks were being developed
+(\citeproc{ref-vanderlaan2011}{Van Der Laan and Rose 2011}), along with
+causal mediation analysis methods (\citeproc{ref-Diaz2023}{Dı́az \emph{et
+al.} 2023}; \citeproc{ref-pearl2009a}{Pearl 2009};
+\citeproc{ref-robins1992}{Robins and Greenland 1992};
+\citeproc{ref-rudolph2024mediation}{Rudolph \emph{et al.} 2024};
+\citeproc{ref-vanderweele2015}{VanderWeele 2015};
 \citeproc{ref-vanderweele2014a}{VanderWeele and Vansteelandt 2014};
 \citeproc{ref-vansteelandt2012}{Vansteelandt \emph{et al.} 2012}), and
 techniques for analysing time-varying treatments
@@ -2010,8 +1992,8 @@ Graphs}\label{id-app-b}
 
 \begin{table}
 
-\caption{\label{tbl-pearltable}On the limitations of causal DAGs
-compared to Single World Intervention Graphs.}
+\caption{\label{tbl-pearltable}On the limitations of causal directed
+acyclic graphs compared to Single World Intervention Graphs.}
 
 \centering{
 
@@ -2160,11 +2142,17 @@ acyclic graphs}. Retrieved from
 
 \bibitem[\citeproctext]{ref-bulbulia2024wierd}
 Bulbulia, J (2024) The weirdest causal inferences in the world.
+\emph{PsyArXiv}.
 doi:\href{https://doi.org/10.31234/osf.io/kj7rv}{10.31234/osf.io/kj7rv}.
 
 \bibitem[\citeproctext]{ref-bulbulia2023}
 Bulbulia, JA (2023) Causal diagrams (directed acyclic graphs): A
 practical guide.
+
+\bibitem[\citeproctext]{ref-bulbulia2023a}
+Bulbulia, JA, Afzali, MU, Yogeeswaran, K, and Sibley, CG (2023)
+Long-term causal effects of far-right terrorism in {N}ew {Z}ealand.
+\emph{PNAS Nexus}, \textbf{2}(8), pgad242.
 
 \bibitem[\citeproctext]{ref-chatton2020}
 Chatton, A, Le Borgne, F, Leyrat, C, \ldots{} Foucher, Y (2020)
@@ -2179,6 +2167,11 @@ Chatton, A, and Rohrer, JM (2024) The causal cookbook: Recipes for
 propensity scores, g-computation, and doubly robust standardization.
 \emph{Advances in Methods and Practices in Psychological Science},
 \textbf{7}(1), 25152459241236149.
+
+\bibitem[\citeproctext]{ref-cinelli2022}
+Cinelli, C, Forney, A, and Pearl, J (2022) A Crash Course in Good and
+Bad Controls. \emph{Sociological Methods \&Research}, 00491241221099552.
+doi:\href{https://doi.org/10.1177/00491241221099552}{10.1177/00491241221099552}.
 
 \bibitem[\citeproctext]{ref-darwin1887life}
 Darwin, C (1887) \emph{The life and letters of charles darwin, volume i}
@@ -2213,6 +2206,16 @@ Reprint edition, Cambridge, MA: Harvard University Press.
 Greenland, S (2009) Commentary: Interactions in epidemiology: Relevance,
 identification, and estimation. \emph{Epidemiology}, \textbf{20}(1),
 14--17.
+
+\bibitem[\citeproctext]{ref-greenland1999}
+Greenland, S, Pearl, J, and Robins, JM (1999) Causal diagrams for
+epidemiologic research. \emph{Epidemiology (Cambridge, Mass.)},
+\textbf{10}(1), 37--48.
+
+\bibitem[\citeproctext]{ref-hernan2023}
+Hernan, MA, and Robins, JM (2023) \emph{Causal inference}, Taylor \&
+Francis. Retrieved from
+\url{https://books.google.co.nz/books?id=/_KnHIAAACAAJ}
 
 \bibitem[\citeproctext]{ref-hernan2024WHATIF}
 Hernan, MA, and Robins, JM (2024) \emph{Causal inference: What if?},
@@ -2255,6 +2258,11 @@ from \url{https://tlverse.org/tlverse-handbook/index.html}
 Lash, TL, Rothman, KJ, VanderWeele, TJ, and Haneuse, S (2020)
 \emph{Modern epidemiology}, Wolters Kluwer. Retrieved from
 \url{https://books.google.co.nz/books?id=SiTSnQEACAAJ}
+
+\bibitem[\citeproctext]{ref-major2023exploring}
+Major-Smith, D (2023) Exploring causality from observational data: An
+example assessing whether religiosity promotes cooperation.
+\emph{Evolutionary Human Sciences}, \textbf{5}, e22.
 
 \bibitem[\citeproctext]{ref-mcelreath2020}
 McElreath, R (2020) \emph{Statistical rethinking: A {B}ayesian course
@@ -2345,6 +2353,11 @@ Robins, JM, and Richardson, TS (2010) Alternative graphical causal
 models and the identification of direct effects. \emph{Causality and
 Psychopathology: Finding the Determinants of Disorders and Their Cures},
 \textbf{84}, 103--158.
+
+\bibitem[\citeproctext]{ref-rohrer2018}
+Rohrer, JM (2018) Thinking clearly about correlations and causation:
+Graphical causal models for observational data. \emph{Advances in
+Methods and Practices in Psychological Science}, \textbf{1}(1), 27--42.
 
 \bibitem[\citeproctext]{ref-rubin1976}
 Rubin, DB (1976) Inference and missing data. \emph{Biometrika},
@@ -2464,6 +2477,11 @@ Statistical Society Series B: Statistical Methodology}, \textbf{84}(3),
 Vo, T-T, Williams, N, Liu, R, Rudolph, KE, and Dıaz, I (2024) Recanting
 twins: Addressing intermediate confounding in mediation analysis.
 \emph{arXiv Preprint arXiv:2401.04450}.
+
+\bibitem[\citeproctext]{ref-westreich2010}
+Westreich, D, and Cole, SR (2010) Invited commentary: positivity in
+practice. \emph{American Journal of Epidemiology}, \textbf{171}(6).
+doi:\href{https://doi.org/10.1093/aje/kwp436}{10.1093/aje/kwp436}.
 
 \bibitem[\citeproctext]{ref-westreich2013}
 Westreich, D, and Greenland, S (2013) The table 2 fallacy: Presenting
