--- a/manuscripts/24-jb-dags/24-jb-experiments.qmd
+++ b/manuscripts/24-jb-dags/24-jb-experiments.qmd
@@ -1,8 +1,8 @@
 ---
 title: 'Confounding in Experiments'
 abstract: |
-  Confounding bias arises when a treatment and outcome share a common cause. In randomised controlled trials (experiments), treatment assignment is random. It would appear there can be no confounding bias in experiments. Here, we use causal directed acyclic graphs to clarify seven structural sources of bias in randomised controlled trials and demonstrate the interest of causal inference methods for the design and analysis of experiments.
-  
+  Confounding bias arises when a treatment and outcome share a common cause. In randomised controlled trials, treatment assignment is random, ostensibly eliminating confounding bias. Here, we use causal directed acyclic graphs to unveil eight structural sources of bias that nevertheless persist in these trials. This analysis highlights the crucial role of causal inference methods in the design and analysis of experiments, ensuring the validity of conclusions drawn from experimental data.
+
   **Keywords:** *Causal Inference*; *Experiments*; *DAGs*; *Evolution*; *Per Protocol Effect*; *Intention to Treat Effect*
 author: 
   - name: Joseph A. Bulbulia
@@ -98,21 +98,21 @@ library(margot)
 loadfonts(device = 'all')
 ```
 
-
-
 ## Introduction
 
-Here, we consider seven structural sources of bias in randomised controlled trials, henceforth 'experiments.' The examples are not exhaustive. We do not consider biases from selection into the study, which may threaten generalisation, nor do we consider censoring biases from study attrition, where population characteristics of the restricted sample at the end of the study differ from those at baseline concerning treatment effects. Both types of sample/target population issues can invalidate experimental results. However, such biases present as failures in external validity. Our focus here will be on threats to internal validity from confounding that relate the treatment to the outcome in the absence of confounding. We will assume large samples such that random differences in the distribution of variables that may affect treatment do not come into play. We will also assume that the experimental designs are double-blind, that treatment conditions are the same across all arms, and that the investigators are careful and scrupulous. No chance event, other than randomisation, is left to chance.
+"Does not randomisation, by its very nature, eliminate all systematic causes of treatment assignment and outcome?"
 
-'Doesn't randomisation, by its very nature, eliminate all systematic causes of treatment assignment and so of treatment assignment and outcome?'
+Yes.
 
-We assume the answer is yes.
+"Does this mean that confounding is ruled out?"
 
-'Doesn't this mean that confounding is ruled out?'
+No.
 
-The answer is no. Eight examples illustrate why. Understanding how confounding arises in experiments is important for experimental design, data analysis, and inference. However, the examples clarify problems of general interest about how causality operates over time, confounding where the treatment affects attrition, non-compliance, and non-response, and differences between the effects of randomisation (intention-to-treat effects) and the causal effects of treatments themselves (per-protocol effects).
+Assume large sample sizes to minimise random differences in variable distribution. Assume that the experimental trials are double-blind, with consistent treatment conditions across all arms, applied by meticulous investigators. Assume no chance event, other than randomisation. Finally, assume that the target population is not restricted in the sample population, ensuring that the experiments, if internally valid, will generalise. Assume no measurement error in the measures.
 
-We begin by defining our terms ([Appendix A](#id-app-a) provides a glossary of terms in causal inference.)
+Nevertheless, confounding biases can arise. Here, I use eight examples to illustrate common risks. Whereas some risks arise from common flaws in experimental designs, such as post-randomisation selection criteria and post-randomisation covariate adjustment, hazards in estimating the 'per-protocol effect' of treatments do not arise from errors of design. These typically require the use of methods for causal inference in 'real world' observational studies. The eight examples demonstrate the utility of causal directed acyclic graphs (causal DAGs) for easing the cognitive demand in diagnosing confounding bias in experimental designs. Overall, understanding how confounding occurs is crucial for experimental design, data analysis, and inference, demonstrating the utility of causal inference methods for diagnosing and addressing vulnerabilities in randomised experimental designs.
+
+We begin by defining our terms. [Appendix A](#id-app-a) provides a glossary of terms in causal inference.
 
 ### Terminology
 
@@ -166,25 +166,22 @@ We use the following conventions in our directed acyclic graphs:
 The five elementary structures of causality from which all causal directed acyclic graphs can be built.
 :::
 
-In the 1990s, Judea Pearl demonstrated that causal dependencies could be evaluated using observable probability distributions [@pearl1995; @pearl2009a]. He also showed that causal directed acyclic graphs (causal DAGs) could be employed to clarify the conditional dependencies among variables [@pearl1995]. This means that, based on assumptions about causal structure, investigators could investigate strategies for identifying causal effects from the joint distributions of observed data. 
+Pearl demonstrated that causal dependencies could be evaluated by linking observable probability distributions to directed acyclic graphs [@pearl1995; @pearl2009a]. This means that, based on assumptions about causal structure, investigators could investigate strategies for identifying causal effects from the joint distributions of observed data.  The graphical rules that Pearl developed and proved are known as the rules of d-separation [@pearl1995], and are presented in @tbl-fiveelementary. 
 
-The graphical rules that Pearl developed and proved are known as the rules of d-separation [@pearl1995]. 
+The rules of d-separation are as follows:
 
 \begin{enumerate}[a)]
-     \item  {\bf Fork rule} ($B \leftarrowNEW \boxed{A} \rightarrowNEW C$): $B$ and $C$ are independent when conditioning on $A$: ($B \coprod C \mid A$).
-     \item  {\bf Chain rule} ($A \rightarrowNEW \boxed{B} \rightarrowNEW C$): Conditioning on $B$ blocks the path between $A$ and $C$: ($A \coprod C \mid B$).
-     \item  {\bf Collider rule} ($A \rightarrowNEW \boxed{C} \leftarrowNEW B$): $A$ and $B$ are independent until conditioning on $C$, which introduces dependence: ($A \cancel{\coprod} B \mid C$). 
- \end{enumerate}
+     \item {\bf Fork rule} ($B \leftarrowNEW \boxed{A} \rightarrowNEW C$): $B$ and $C$ are independent when conditioning on $A$: ($B \coprod C \mid A$).
+     \item {\bf Chain rule} ($A \rightarrowNEW \boxed{B} \rightarrowNEW C$): Conditioning on $B$ blocks the path between $A$ and $C$: ($A \coprod C \mid B$).
+     \item {\bf Collider rule} ($A \rightarrowNEW \boxed{C} \leftarrowNEW B$): $A$ and $B$ are independent until conditioning on $C$, which introduces dependence: ($A \cancel{\coprod} B \mid C$). 
+\end{enumerate}
 
-The rules of d-separation give rise to the backdoor criterion and 'backdoor adjustment' theorem, which provide identification algorithms conditional on the structural assumptions encoded in a causal directed acyclic graph [@pearl1995]. Here, we use the symbol $\mathcal{G}$ to name a graph, which we will identify by referring to a row in a table.
+The rules of d-separation give rise to the backdoor criterion and the 'backdoor adjustment' theorem, which provide identification algorithms conditional on the structural assumptions encoded in a causal directed acyclic graph [@pearl1995].
 
-::: {#tbl-terminologygeneral}
-```{=latex}
-\terminologydirectedgraph
-```
-Elements of Causal Graphs 
-:::
 
+
+
+<!-- 
 Consider @tbl-terminologygeneral $\mathcal{G}_1$: If we assume that $A$ and $B$ are not causally related, and further that they do not share common causes, then $A$ and $B$ will not be statistically related.
 
 Consider @tbl-terminologygeneral $\mathcal{G}_2$: If we assume that $A$ and $B$ are causally related, that they do not share common causes or that their common causes have been accounted for, then $A$ and $B$ will be statistically related.
@@ -197,7 +194,7 @@ Finally, consider @tbl-terminologygeneral $\mathcal{G}_5$: If we assume that $A$
 
 If we assume that the variables encoded in the graph correspond to 'Structural Causal Models' then all causal relationships can be defined by the elementary structures presented in @tbl-terminologygeneral.
 
-Now that we have clarified how causal directed graphs work, we may use them to clarify the first concept we consider confounding bias in randomised experiments.
+Now that we have clarified how causal directed graphs work, we may use them to clarify the first concept we consider confounding bias in randomised experiments. -->
 
 
 ## Eight Examples of Confounding Bias in Experiments
@@ -209,15 +206,18 @@ Now that we have clarified how causal directed graphs work, we may use them to c
 Eight confounding biases in Randomised Controlled Trials.
 :::
 
+
+We use causal directed acyclic graphs to describe eight types of confounding bias in randomised controlled trials ('experiments'). We use the symbol $\mathcal{G}$ to denote a causal directed acyclic graph in the table. The first digit in the graph subscript indexes the example. The second digit in the graph subscript indexes the problem or the response to the problem. Specifically, if the subscript '1' is used, it refers to the graph associated with the problem; if '2' is used, it refers to the graph associated with the response. 
+
 ### Example 1: Post-treatment Adjustment Blocks Treatment Effect
 
-@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{1.1}$ illustrates the threat of confounding bias by conditioning on a post-treatment mediator. Imagine investigators are interested in whether the framing of an authority as religious or secular -- 'source framing' -- affects subjective ratings of confidence in the authority -- 'source credibility.' There are two conditions. A claim is presented from an authority. The content of the claim does not vary by condition. Participants are asked to rate the claim on a credibility scale. Next, imagine that the investigators decide they should control for religiosity. Furthermore, imagine there is a true effect of source framing. Finally, assume that the source framing not only affects source credibility but also affects religiosity. Perhaps viewing a religious authority makes religious people more religious. In this scenario, measuring religiosity following the experimental intervention will partially block the effect of the treatment on the outcome. It might make it appear that the treatment does not work for religious people, when in reality it works because it amplifies religiosity. (Note that in this graph we assume that $L_1$ occurs before $Y_2$, however investigators may have measured $L_1$ after $Y_2$. Our time index pertains to the occurrence of the event, not of its measurement. This statement applies to all examples that follow.)
+@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{1.1}$ illustrates the threat of confounding bias by conditioning on a post-treatment mediator [@montgomery2018, @mcelreath2020]. Imagine investigators are interested in whether the framing of an authority as religious or secular -- 'source framing' -- affects subjective ratings of confidence in the authority -- 'source credibility.' There are two conditions. A claim is presented from an authority. The content of the claim does not vary by condition. Participants are asked to rate the claim on a credibility scale. Next, imagine that the investigators decide they should control for religiosity. Furthermore, imagine there is a true effect of source framing. Finally, assume that the source framing not only affects source credibility but also affects religiosity. Perhaps viewing a religious authority makes religious people more religious. In this scenario, measuring religiosity following the experimental intervention will partially block the effect of the treatment on the outcome. It might make it appear that the treatment does not work for religious people, when in reality it works because it amplifies religiosity. (Note that in this graph we assume that $L_1$ occurs before $Y_2$, however investigators may have measured $L_1$ after $Y_2$. Our time index pertains to the occurrence of the event, not of its measurement. This statement applies to all examples that follow.)
 
 @tbl-terminologyelconfoundersexperiments $\mathcal{G}_{1.2}$ clarifies a response: do not control post-treatment variables, here the intermediary effects of 'religiosity'. If effect-modification by religiosity is scientifically interesting, measure religiosity before randomisation. Randomisation did not prevent confounding.
 
 ### Example 2: Post-treatment Adjustment Induces Collider Stratification Bias
 
-@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{2.1}$ illustrates the threat of confounding bias by conditioning on a post-treatment collider. Imagine the same experiment as in Example 1 and the same conditioning strategy, where religiosity is measured following the treatment. We assume the treatment affects religiosity. However, in this example, religiosity has no causal effect on the outcome, source credibility. Finally, imagine an unmeasured variable affects both the mediator, religiosity ($L_1$), and the outcome, source credibility ($Y_2$). This unmeasured confounder might be religious education in childhood. In this scenario, conditioning on the post-treatment variable religiosity will open a backdoor path between the treatment and outcome, leading to an association in the absence of causation. Randomisation did not prevent confounding.
+@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{2.1}$ illustrates the threat of confounding bias by conditioning on a post-treatment collider [@cole2010]. Imagine the same experiment as in Example 1 and the same conditioning strategy, where religiosity is measured following the treatment. We assume the treatment affects religiosity. However, in this example, religiosity has no causal effect on the outcome, source credibility. Finally, imagine an unmeasured variable affects both the mediator, religiosity ($L_1$), and the outcome, source credibility ($Y_2$). This unmeasured confounder might be religious education in childhood. In this scenario, conditioning on the post-treatment variable religiosity will open a backdoor path between the treatment and outcome, leading to an association in the absence of causation. Randomisation did not prevent confounding.
 
 @tbl-terminologyelconfoundersexperiments $\mathcal{G}_{2.2}$ clarifies a response: do not control post-treatment variables.
 
@@ -228,7 +228,7 @@ The point that investigators should not condition on post-treatment variables is
 
 @tbl-terminologyelconfoundersexperiments $\mathcal{G}_{3.1}$ illustrates the threat of confounding bias from adjusting for post-treatment variables, here, one affected by the treatment and outcome absent any unmeasured confounder. In our example, imagine both the treatment, source framing, and the outcome, source credibility, affect religiosity measured at the end of the study. Investigators measure religiosity at the end of the study and include this measure as a covariate. However, doing so induces collider bias such that if both the treatment and outcome are positively associated with religiosity, the collider, they will be negatively associated with each other. Conditioning on the collider risks the illusion of a negative experimental effect in the absence of causality.
 
-@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{3.2}$ clarifies a response: again, do not control post-treatment variables! Here, 'religiosity' measured after the end of the study. If the scientific interest is in effect modification or obtaining statistical precision, measure covariates before randomisation.
+@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{3.2}$ clarifies a response: again, do not control post-treatment variables. Here, 'religiosity' measured after the end of the study. If the scientific interest is in effect modification or obtaining statistical precision, measure covariates before randomisation.
 
 ### Example 4: Demographic Measures at End of Study Condition on a Collider That Opens a Backdoor Path
 
@@ -266,28 +266,35 @@ Setting aside self-inflicted injuries of post-treatment conditioning and directe
 
 If there were no effect of yoga on well-being except through flexibility, and if flexibility were not affected by the unmeasured antipathy toward eastern spiritual practices, and further, if the effect of flexibility on yoga at each time point were conditionally independent of all future counterfactual data, both for the treatments and the outcomes, then it might be possible to construct special estimators that identify the per-protocol effect of yoga on well-being in the presence of unmeasured confounding that affects adherence (refer to @hernan2017per). Clearly, we have come a long way from the ANOVAs routinely deployed in experimental studies. However, if we seek to understand the effect of yoga on well-being and not the effect of random assignment to yoga on well-being, we require special estimators.
 
-
 ## Conclusions
 
-The examples we have considered here hardly exhaust threats to causal inference in experiments. Whenever the sample at the end of a study differs in the distribution of effect modifiers from the sample population at the start, results will not generalise as we hope. Such bias goes by different names, such as selection bias or target-restriction bias (refer to @yola). We have not considered these threats here. However, I hope the eight examples presented persuade investigators of the following:
+The examples considered here do not exhaust all threats to causal inference in experiments. For example, I have not covered biases arising from sample attrition (refer to @bulbulia2024wierd). However, I hope the eight examples presented persuade experimental investigators of the following:
 
-First, confounding biases are possible in randomised experiments even when randomisation succeeds.
+First, there is no need to adjust for baseline confounders in a non-sequential randomised experiment. Although an unadjusted difference of means should be reported, Lin has shown that if a study is sufficiently powered, regression adjustment where the full set of treatments are interacted with baseline covariates may improve (and will not diminish) asymptotic precision [@lin2012regressexperiments]. In some settings, investigators will want to evaluate effect modification with strata of covariates at baseline. However, in sufficiently large samples, randomisation ensures balance.
 
-Second, causal directed acyclic graphs are useful for clarifying these biases.
+Second, confounding biases can occur in randomised experiments even when randomisation succeeds. To evaluate such bias, we must first state whether our causal estimand is the intention-to-treat effect or the per-protocol effect. Randomisation recovers an unbiased estimate of the intention-to-treat effect — that is, the effect of treatment assignment. Randomisation will only recover the per-protocol effect, the effect of following a treatment, if those assigned to treatment follow the treatment to which they have been assigned.
 
-Third, many such biases are self-inflicted, in the sense that it is easy to destroy the benefits of randomisation through poor research designs. These self-inflicted biases arise from conditioning on variables that may be affected by treatment assignment. By the same token, the remedy to self-inflicted injury is easily applied. Do not injury yourself. If an experiment consists of a single treatment, unless you are certain that treatments do not affect covariates, covariate data should be collected before randomisation.
+Third, causal directed acyclic graphs are useful for clarifying sources of bias for both the intention-to-treat effect and the per-protocol effect. 
 
-Fourth, 'attention checks' should not be used to select participants after treatments have been randomised. If attention is a relevant covariate, measures should be taken before randomisation.
+  i. For the intention-to-treat effect, biases arise in two main ways: 
+      a. when investigators impose selection criteria on participants after randomisation (e.g., assessing treatment effects only in those who have followed protocols) or 
+      b. when investigators estimate treatment effects using covariates collected after randomisation. 
+    Both post-treatment selection and post-treatment conditioning are self-inflicted sources of confounding bias. The remedy: do not allow your design to compromise randomisation.
+  ii. For the per-protocol effect, randomisation cannot guarantee unbiased estimates. Obtaining consistent estimates for the per-protocol effect requires the same assumptions and methods that are required when estimating causal effects in observational studies.
 
-Fifth, investigators should not adopt naive practices of inferring per-protocol effects from the portion of the sample that has followed experimental protocols. Not only is such selection nearly guaranteed to result in differences between the study population at the start and end of the study, compromising external validity [@yola], but we have also considered that both measured and unmeasured confounders may invalidate per-protocol results for the retained sample.
+Fourth, in a sequential randomised experiment, standard methods such as regression adjustment, statistical structural equation models, and multi-level models will often fail to yield unbiased estimands [@richardson2013; @young2014identification; @bulbulia2024swigstime]. Special estimators such as 'g-methods' [@hernan2024WHATIF] or targeted learning [@vanderlaan2018] may be necessary to recover per-protocal effects in sequential designs. The requirements for estimating per-protocol effects in experiments cannot be stated in isolation from the details of each study [@robins1986; @hernan2024WHATIF].
 
-Sixth, methods for identifying causal effects in observational settings may be useful for identifying causal effects in randomised experiments because, after randomisation, every experiment becomes an observational study.
+From these observations, we offer the following practical advice:
 
-Seventh, the points that we consider here for experiments apply to observational studies that have obtained pseudorandomisation through baseline adjustments. Standardly employed methods in observational science, such as structural equation models or multi-level models, will encounter the same problems that arise in experimental settings with sustained treatment strategies. Sustained treatment strategies require sequential randomisation (refer to @richardson2013; @young2014identification;  @yola). 
+1. Ensure covariate data are collected before randomisation into treatments.
+2. If attention is a relevant covariate, measure it before randomisation. Do not use 'attention checks' to select participants after randomisation into treatments.
+3. If adjustment is used in a single point treatment with baseline covariates, interact every level of treatment with the baseline covariates, following @lin2012regressexperiments.
+4. For sequential treatments, collect data for adherence (where possible).
+5. For sequential treatments, at each measurement interval, ensure covariate data collection for any variable that might affect adherence, or that might be proxies for such variables, particularly if these variables, or proxies of these variables, might affect outcomes at the end of the study.
+6. Do not infer per-protocol effects from the portion of the sample that followed experimental protocols. Such selection can lead to differences between the study population at the start and end, compromising external validity.
+7. Where possible, report both the per-protocol effect and the intention-to-treat effect.
 
-Here, we have demonstrated that satisfying the assumptions for valid causal inferences is typically much more challenging than many experimental human scientists presently understand. Methods for causal inference have wide scope for improving the design, analysis, and interpretation of experimental research.
-
-
+It is beyond the scope of this commentary to describe the special methods for estimating per-protocol effects in sequential studies. Our task has been to demonstrate that satisfying the assumptions for valid causal inferences in experiments is typically more challenging than many experimental human scientists presently understand [refer to @montgomery2018]. Methods for causal inference have wide scope for improving the design, analysis, and interpretation of experimental research.
 
 {{< pagebreak >}}
 
